<resources>
    <string name="app_name">Notes</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="about_developers">About developers</string>
    <string name="action_share">Share</string>
    <string name="action_add_an_image">Add an image</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_note">Add note</string>
    <string name="action_search">Search</string>
    <string name="notes_list">Notes list</string>
    <string name="note">Note</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="delete_note_question">Do you really want to delete the note?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="exit_question">Do you really want to exit the app?</string>
    <string name="action_edit">Edit</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="content">Content</string>
    <string name="btn_update">Update</string>
    <string name="btn_save">Save</string>
    <string name="auth_text">Для продолжения необходимо авторизоваться:</string>
    <string name="sign_out">Sign out</string>
</resources>